--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								<span class="image main"><img src="images/mha.png" width= "" height="500" alt="Mile High Analytics" /></span>
 								<p>Hello! I'm Maya Love, an analytics engineer with a passion for data-driven decision-making. My mission as the Head Technology Manager, is to help you protect your present needs and achieve your future goals through the power of data. With expertise in statistical analysis, financial forecasting, data visualizations, and data curriculum, I can help you transform complex data sets into clear and actionable insights. Let me partner with you to uncover new opportunities for growth and success. Feel free to contact me and <b>sign up for a free 15 minute consultation <a href="https://calendly.com/milehighanalytics" target = "_blank">here</a>!</b></p>
 								<span class="image main"><img src="images/bio2.png" width= "" height="" alt="bio" /></span>
-								<p>As a data scientist and engineer with experience in both the public and private sectors, I have a unique blend of technical skills and organizational strategy that can help you get the most out of your data. With a masters degree of science in Applied Data Science and International Studies along with 4 years of industry experience, I have the knowledge and expertise to tackle complex data challenges and drive results for your business. When I'm not working, you can find me coaching basketball or spending time with my furry companion.</p>
+								<p>As a data professional with experience in both the public and private sectors, I have a unique blend of technical skills and organizational strategy that can help you get the most out of your data. With a masters degree of science in Applied Data Science and International Studies along with 4 years of industry experience, I have the knowledge and expertise to tackle complex data challenges and drive results for your business. When I'm not working, you can find me coaching basketball or spending time with my furry companion.</p>
 							</article>
 
 						<!-- Services -->
@@ -105,7 +105,7 @@
 							<h2><b>Contact Us</b></h2>
 							<p>Have questions or want to learn more about our services?</p>
 							<p><b>Schedule a free 15 minute consultation to discuss your data challenges <a href="https://calendly.com/milehighanalytics" target = "_blank">here</a>!</b></p>
-							<p>Feel free to email us directly at <a href="mailto:techmanager@milehighanalytics.org">machineloveco@gmail.com</a>.</p>
+							<p>Feel free to email me directly at <a href="mailto:techmanager@milehighanalytics.org">techmanager@milehighanalytics.org</a>.</p>
 
 							<h4>Additional Links</h4>
 									<ul class="icons">
