--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 								<h3>Data Literacy Workshops</h3>
 								<p>Our data literacy workshops provide hands-on training in Excel, data management, and financial analysis. We understand that the ability to work with data is an essential skill for professionals in many fields, and our experienced trainers will help you develop the skills you need to succeed. Whether you're new to Excel or looking to build your financial analysis skills, our workshops will equip you with the knowledge and tools you need to excel in your work. Our workshops are designed to be interactive, engaging, and tailored to your specific needs, so you get the most out of your training. With our data literacy workshops, you'll be able to work with data more efficiently and effectively, and take your skills to the next level</p>
 							  </div>
-							  <p><b>Excited about what we offer? Email us @techmanager@milehighanalytics.org to set up a free 15 minute consultation, so we can partner together to solve your business needs!</b></p>
+							  <p>Excited about what we offer? <b>Email us @techmanager@milehighanalytics.org to set up a free 15 minute consultation </b>, so we can partner together to solve your business needs!</p>
 							</div>
 						</article>
 						  
@@ -105,7 +105,7 @@
 							<h2><b>Contact Us</b></h2>
 							<p>Have questions or want to learn more about our services?</p>
 							<p><b>Schedule a free 15 minute consultation to discuss your data challenges <a href="https://calendly.com/milehighanalytics" target = "_blank">here</a>!</b></p>
-							<p>Feel free to email me directly at <a href="mailto:techmanager@milehighanalytics.org">techmanager@milehighanalytics.org</a>.</p>
+							<p>Feel free to email me directly at <a href="mailto:techmanager@milehighanalytics.org"> <b>techmanager@milehighanalytics.org</b></a>.</p>
 
 							<h4>Additional Links</h4>
 									<ul class="icons">
