Update3 index.html

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 							<h2><b>Contact Us</b></h2>
 							<p>Have questions or want to learn more about our services?</p>
 							<p><b>Schedule a free 15 minute consultation to discuss your data challenges <a href="https://calendly.com/milehighanalytics" target = "_blank">here</a>!</b></p>
-							<p>Feel free to email me directly at <a href="mailto:techmanager@milehighanalytics.org"> <b>techmanager@milehighanalytics.org</b></a>.</p>
+							<p>Feel free to email me directly at <a href="mailto:techmanager@milehighanalytics.org" target = "_blank"><b>techmanager@milehighanalytics.org</b></a>.</p>
 
 							<h4>Additional Links</h4>
 									<ul class="icons">
